@@ -66,7 +66,7 @@ httpd <- function(path, query, ...)
     {
     	bool <- function(x) as.logical(as.numeric(x))
         res <- if(identical(names(query), "category"))
-            help.search(keyword = query, verbose = 1L, use_UTF8 = TRUE)$matches
+            help.search(keyword = query, verbose = 1L, use_UTF8 = TRUE)
         else {
             fields = c("alias", "concept", "title")
             args <- list(pattern = ".")
